# eta-widgets

./: CMakeLists.txt  ChangeLog
debian/: changelog  control  copyright  gbp.conf  rules
keyboard-hwidget/: CMakeLists.txt  Messages.sh  keyboardclient.cpp  keyboardclient.h  keyboardclient.kdev4  plasma-keyboardclient-default.desktop
keyboard-hwidget/.kdev4/: keyboardclient.kdev4
keyboard-hwidget/package/: metadata.desktop
keyboard-hwidget/package/contents/ui/: main.qml
panel-bottom-widget/: Doxyfile  metadata.desktop
panel-bottom-widget/contents/config/: main.xml
panel-bottom-widget/contents/ui/: EtaGestemas.qml  Help.qml  KeyboardClient.qml  VolumeChanger.qml  config.ui  main.qml
panel-top-quick-widget/: Doxyfile  metadata.desktop
panel-top-quick-widget/contents/images/: .directory
panel-top-quick-widget/contents/ui/: ActionItem.qml  DeviceItem.qml  PanelSide.qml  PasswordInput.qml  PopUpContainer.qml  WidgetCompactRepresenter.qml  main.qml
panel-top-widget/: .directory  Doxyfile  metadata.desktop
panel-top-widget/contents/code/: apps.js
panel-top-widget/contents/config/: main.xml
panel-top-widget/contents/ui/: ApplicationListView.qml  BlackBoard.qml  Menu.qml  MenuItem.qml  PanelApp.qml  PanelSide.qml  RightArrow.qml  SearchField.qml  Title.qml  WidgetCompactRepresenter.qml  config.ui  main.qml
peach-hwidget/: CMakeLists.txt  Messages.sh  peachhybrid.cpp  peachhybrid.h  plasma-peachhybrid-default.desktop
peach-hwidget/package/: metadata.desktop
peach-hwidget/package/contents/ui/: main.qml
qmlnewappmenu/: metadata.desktop
qmlnewappmenu/contents/ui/: Menu.qml  MenuItem.qml  Title.qml  main.qml
search-widget/: Doxyfile  metadata.desktop
search-widget/contents/ui/: SearchEngine.qml  SearchPlasmoid.qml  main.qml
